[package]
name = "layer-one-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-client = {git="https://github.com/jonas089/casper-client-rs", branch="kairos-1.5.6-uni"}
casper-types = {git="https://github.com/jonas089/casper-node", branch="dev"}
casper-hashing = {git="https://github.com/jonas089/casper-node", branch="dev"}
tokio = {version="1.36.0", features=["full"]}
serde_json = "1.0.114"
bincode = "1.3.3"
risc0-zkvm = {version="0.21.0", default-features=false, features=["prove"]}
kairos-risc0-types = {path="../kairos-risc0-types", features=["kairos-delta-tree"]}
methods = { path = "../methods" }

[dev-dependencies]
