[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros", "tokio"]}
bigdecimal = {version = "0.4.3", features = ["serde"]}
chrono = {version = "0.4.35", features = ["serde"]}
deadpool = {version = "0.10.0", default-features = false, features = ["managed"]}
deadpool-diesel = {version = "0.5.0", features = ["postgres"]}
diesel = {version = "2.1.4", features = ["postgres", "serde_json", "chrono", "numeric"]}
fern = "0.6.2"
kairos-risc0-types = {version = "0.1.0", path = "../kairos-risc0-types"}
lazy_static = "1.4.0"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.34"
tokio = {version = "1.36.0", features = ["macros"]}
toml = "0.8.11"
tower = "0.4.13"

[features]
default = ["delta-tree"]
delta-tree = []
